--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,14 @@ body {
 #wdyl-container {
 	text-align: center;	
 }
-#stmt {
+.stmt {
 	font-size: 50px;
 	padding-top: 150px;
+	margin: 0 2px 0 2px;
 	color: white;
+}
+ul li {
+	display: inline-block;
 }
 /* Input Field Section */
 #user-input {
