--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 	height: 100%;
 }
 #intro {
+	margin-top: -100px;
 	background-color: #EC4938;
 	height: 100%;
 }
@@ -19,6 +20,7 @@ body {
 	height: 100%;
 }
 #intro-h1 {
+	padding-top: 70px;
 	color: white;
 	font-size: 130px;
 	letter-spacing: 1px;
@@ -97,5 +99,6 @@ ul li {
 }
 /*Grid Section*/
 #grid-section {
-	height: 100%;	
+	height: 100%;
+	background-color: white;
 }
