--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,17 @@ body {
 #wdyl-container {
 	text-align: center;	
 }
+.hdiw, .desc {
+	color: white;
+}
+.hdiw {
+	margin: 50px 0 5px 0;
+	font-size: 20px; 
+}
+.desc {
+	width: 50%;
+	margin: 0 auto;
+}
 .stmt {
 	font-size: 50px;
 	padding-top: 150px;
@@ -81,6 +92,16 @@ ul li {
 	background-color: transparent;
 	border-style: none none solid none;
 	border-color: white;
+}
+.submit-area {
+	padding-top: 10px;	
+}
+.user-submit {
+	background-color: transparent;
+	color: white;
+	border: 1px solid white;
+	width: 60px;
+	height: 30px;
 }
 .user-input:focus {
 	outline: none;	
