--- a/css/style.css
+++ b/css/style.css
@@ -119,24 +119,8 @@ ul li {
    color: white;  
 }
 /*Grid Section*/
-#user-enjoys{
-	margin-top: -20px;
-	height: 70px;
-	background-color: #93B2C7;
-	text-align: center;
-}
-#user-enjoys:hover {
-	cursor: pointer;
-}
-.fixed {
-	position:fixed;
-    top:0;
-    width:100%;
-    z-index:100;
-}
-#lock {
-	display:inline-block;
-	margin-top: -8px;
+.grid-section {
+	background-color: white;	
 }
 .display-similar {
 	padding-top: 1%;
@@ -146,4 +130,37 @@ ul li {
 #grid-section {
 	height: 100%;
 	background-color: white;
+}
+#recommendmore {
+	background-color: black;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 50px;
+	opacity: .8;
+	text-align: center;
+}
+.morelike {
+	background-color: transparent;
+	color: white;
+	border: solid 1px white;
+	text-align: center;
+	margin-top: 10px;
+	width: 40%;
+	border-style: none none solid none;
+}
+.more-like:focus {
+	outline: none;	
+}
+.spacetosee {
+	height: 50px;	
+}
+.alsolike {
+	background-color: transparent;
+	color: white;
+	margin-left: 10px;
+	border: 1px solid white;
+}
+.alsolike:hover, .morelike:hover {
+	cursor: pointer;
 }
