got the extra input field to stop reloading. Now need to fix the no typing inside of the field

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ ul li {
 	width: 40%;
 	border-style: none none solid none;
 }
-.more-like:focus {
+.morelike:focus {
 	outline: none;	
 }
 .spacetosee {
