--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,6 @@ ul li {
 	height: 50px;
 	opacity: .8;
 	text-align: center;
-	z-index: 2;
 }
 .morelike {
 	background-color: transparent;
@@ -153,6 +152,15 @@ ul li {
 .morelike:focus {
 	outline: none;	
 }
+.addmetoo {
+	background-color: transparent;
+	border: 1px solid black; 
+	padding: 3px;
+	margin-left: 4px;
+}
+.addmetoo:hover {
+	cursor: pointer
+}
 .spacetosee {
 	height: 50px;	
 }
@@ -164,4 +172,34 @@ ul li {
 }
 .alsolike:hover, .morelike:hover {
 	cursor: pointer;
+}
+@media (max-width: 670px) {
+		input[type='text'],
+		input[type='number'],
+		textarea {
+ 		 	font-size: 16px;
+		}
+	#intro-h1 {
+		font-size: 70px;
+		padding-bottom: 150px;
+	}
+	.stmt {
+		font-size: 35px;	
+	}
+	.user-input {
+		width: 80%;
+		font-size: 60px;
+	}
+	.submit-area {
+	padding-top: 20px;	
+	}
+	.hdiw {
+	margin: 50px 0 5px 0;
+	font-size: 30px; 
+		padding-bottom: 15px;
+	}
+	.desc {
+	width: 95%;
+	margin: 0 auto;
+	}
 }
